--- a/model-two.ipynb
+++ b/model-two.ipynb
@@ -9,15 +9,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-02T16:22:50.102854Z",
+     "start_time": "2024-05-02T16:22:49.990516Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "data = pd.read_csv('training_data/training_data/ED/train.csv')\n",
+    "dev = pd.read_csv('training_data/training_data/ED/dev.csv')\n",
     "\n",
     "#BERT takes one input sentence, so we need to concatenate the claim and the evidence\n",
-    "data['text'] = data['Claim'] + \" [SEP] \" + data['Evidence']\n"
+    "data['text'] = data['Claim'] + \" [SEP] \" + data['Evidence']\n",
+    "dev['text'] = dev['Claim'] + \" [SEP] \" + dev['Evidence']\n"
    ]
   },
   {
@@ -29,19 +36,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-02T16:23:19.255700Z",
+     "start_time": "2024-05-02T16:22:52.184260Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from transformers import BertTokenizer\n",
+    "from torch.utils.data import DataLoader, TensorDataset, RandomSampler\n",
     "import torch\n",
+    "\n",
     "tokenizer = BertTokenizer.from_pretrained('bert-base-uncased')\n",
     "\n",
-    "# tokenization\n",
-    "inputs = tokenizer(list(data['text']), padding=\"max_length\", truncation=True, max_length=512, return_tensors=\"pt\")\n",
+    "# Tokenize training data\n",
+    "train_inputs = tokenizer(list(data['text']), padding=\"max_length\", truncation=True, max_length=512, return_tensors=\"pt\")\n",
+    "train_labels = torch.tensor(data['label'].values)\n",
     "\n",
-    "#put labels in correct format\n",
-    "labels = torch.tensor(data['label'])\n"
+    "# Create a TensorDataset for the training data\n",
+    "train_dataset = TensorDataset(train_inputs['input_ids'], train_inputs['attention_mask'], train_labels)\n",
+    "train_sampler = RandomSampler(train_dataset)  # Randomly sample for training\n",
+    "train_dataloader = DataLoader(train_dataset, sampler=train_sampler, batch_size=8)\n",
+    "\n",
+    "# Tokenize validation data\n",
+    "dev_inputs = tokenizer(list(dev['text']), padding=\"max_length\", truncation=True, max_length=512, return_tensors=\"pt\")\n",
+    "dev_labels = torch.tensor(dev['label'].values)\n",
+    "\n",
+    "# Create a TensorDataset for the validation data\n",
+    "dev_dataset = TensorDataset(dev_inputs['input_ids'], dev_inputs['attention_mask'], dev_labels)\n",
+    "dev_dataloader = DataLoader(dev_dataset, batch_size=8)  # No need for a sampler here"
    ]
   },
   {
@@ -53,8 +78,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-02T16:23:19.742901Z",
+     "start_time": "2024-05-02T16:23:19.257060Z"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -68,9 +98,7 @@
    "source": [
     "from transformers import BertForSequenceClassification\n",
     "\n",
-    "model = BertForSequenceClassification.from_pretrained('bert-base-uncased', num_labels=2)\n",
-    "\n",
-    "\n"
+    "model = BertForSequenceClassification.from_pretrained('bert-base-uncased', num_labels=2)\n"
    ]
   },
   {
@@ -82,15 +110,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-02T16:22:12.904749Z",
+     "start_time": "2024-05-02T16:22:12.157849Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/murumu1/.local/lib/python3.11/site-packages/torch/cuda/__init__.py:619: UserWarning: Can't initialize NVML\n",
+      "  warnings.warn(\"Can't initialize NVML\")\n",
+      "/home/murumu1/.local/lib/python3.11/site-packages/torch/cuda/__init__.py:749: UserWarning: CUDA initialization: Unexpected error from cudaGetDeviceCount(). Did you run some cuda functions before calling NumCudaDevices() that might have already set an error? Error 804: forward compatibility was attempted on non supported HW (Triggered internally at ../c10/cuda/CUDAFunctions.cpp:108.)\n",
+      "  return torch._C._cuda_getDeviceCount() if nvml_count < 0 else nvml_count\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'inputs' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[4], line 8\u001B[0m\n\u001B[1;32m      5\u001B[0m optimizer \u001B[38;5;241m=\u001B[39m AdamW(model\u001B[38;5;241m.\u001B[39mparameters(), lr\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m5e-5\u001B[39m)\n\u001B[1;32m      7\u001B[0m num_epochs \u001B[38;5;241m=\u001B[39m \u001B[38;5;241m3\u001B[39m\n\u001B[0;32m----> 8\u001B[0m num_training_steps \u001B[38;5;241m=\u001B[39m num_epochs \u001B[38;5;241m*\u001B[39m \u001B[38;5;28mlen\u001B[39m(\u001B[43minputs\u001B[49m[\u001B[38;5;124m'\u001B[39m\u001B[38;5;124minput_ids\u001B[39m\u001B[38;5;124m'\u001B[39m])\n\u001B[1;32m      9\u001B[0m lr_scheduler \u001B[38;5;241m=\u001B[39m get_scheduler(\n\u001B[1;32m     10\u001B[0m     name\u001B[38;5;241m=\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mlinear\u001B[39m\u001B[38;5;124m\"\u001B[39m, optimizer\u001B[38;5;241m=\u001B[39moptimizer, num_warmup_steps\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m0\u001B[39m, num_training_steps\u001B[38;5;241m=\u001B[39mnum_training_steps\n\u001B[1;32m     11\u001B[0m )\n",
+      "\u001B[0;31mNameError\u001B[0m: name 'inputs' is not defined"
+     ]
+    }
+   ],
    "source": [
     "from torch.optim import AdamW\n",
     "from transformers import get_scheduler\n",
     "\n",
-    "#Adam weighted optimizer\n",
-    "#model.parameters() gets weights and biases, lr == learning rate\n",
+    "#Adam weighted optimizer ,model.parameters() gets weights and biases, lr == learning rate\n",
     "optimizer = AdamW(model.parameters(), lr=5e-5)\n",
     "\n",
     "num_epochs = 3\n",
@@ -102,10 +156,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-02T16:23:19.754672Z",
+     "start_time": "2024-05-02T16:23:19.744Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "BertForSequenceClassification(\n  (bert): BertModel(\n    (embeddings): BertEmbeddings(\n      (word_embeddings): Embedding(30522, 768, padding_idx=0)\n      (position_embeddings): Embedding(512, 768)\n      (token_type_embeddings): Embedding(2, 768)\n      (LayerNorm): LayerNorm((768,), eps=1e-12, elementwise_affine=True)\n      (dropout): Dropout(p=0.1, inplace=False)\n    )\n    (encoder): BertEncoder(\n      (layer): ModuleList(\n        (0-11): 12 x BertLayer(\n          (attention): BertAttention(\n            (self): BertSelfAttention(\n              (query): Linear(in_features=768, out_features=768, bias=True)\n              (key): Linear(in_features=768, out_features=768, bias=True)\n              (value): Linear(in_features=768, out_features=768, bias=True)\n              (dropout): Dropout(p=0.1, inplace=False)\n            )\n            (output): BertSelfOutput(\n              (dense): Linear(in_features=768, out_features=768, bias=True)\n              (LayerNorm): LayerNorm((768,), eps=1e-12, elementwise_affine=True)\n              (dropout): Dropout(p=0.1, inplace=False)\n            )\n          )\n          (intermediate): BertIntermediate(\n            (dense): Linear(in_features=768, out_features=3072, bias=True)\n            (intermediate_act_fn): GELUActivation()\n          )\n          (output): BertOutput(\n            (dense): Linear(in_features=3072, out_features=768, bias=True)\n            (LayerNorm): LayerNorm((768,), eps=1e-12, elementwise_affine=True)\n            (dropout): Dropout(p=0.1, inplace=False)\n          )\n        )\n      )\n    )\n    (pooler): BertPooler(\n      (dense): Linear(in_features=768, out_features=768, bias=True)\n      (activation): Tanh()\n    )\n  )\n  (dropout): Dropout(p=0.1, inplace=False)\n  (classifier): Linear(in_features=768, out_features=2, bias=True)\n)"
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "model.to(device)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Training loop\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-02T16:23:33.469009Z",
+     "start_time": "2024-05-02T16:23:19.756447Z"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'lr_scheduler' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[9], line 22\u001B[0m\n\u001B[1;32m     20\u001B[0m loss\u001B[38;5;241m.\u001B[39mbackward()\n\u001B[1;32m     21\u001B[0m optimizer\u001B[38;5;241m.\u001B[39mstep()\n\u001B[0;32m---> 22\u001B[0m \u001B[43mlr_scheduler\u001B[49m\u001B[38;5;241m.\u001B[39mstep()\n\u001B[1;32m     23\u001B[0m optimizer\u001B[38;5;241m.\u001B[39mzero_grad()\n\u001B[1;32m     25\u001B[0m total_loss \u001B[38;5;241m+\u001B[39m\u001B[38;5;241m=\u001B[39m loss\u001B[38;5;241m.\u001B[39mitem()\n",
+      "\u001B[0;31mNameError\u001B[0m: name 'lr_scheduler' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def flat_accuracy(preds, labels):\n",
+    "    pred_flat = np.argmax(preds, axis=1).flatten()\n",
+    "    labels_flat = labels.flatten()\n",
+    "    return np.sum(pred_flat == labels_flat) / len(labels_flat)\n",
+    "\n",
+    "for epoch in range(num_epochs):\n",
+    "    model.train()\n",
+    "    total_loss = 0\n",
+    "\n",
+    "    for batch in train_dataloader:\n",
+    "        batch = tuple(t.to(device) for t in batch)\n",
+    "        b_input_ids, b_input_mask, b_labels = batch\n",
+    "        \n",
+    "        model.zero_grad()\n",
+    "        \n",
+    "        outputs = model(b_input_ids, token_type_ids=None, attention_mask=b_input_mask, labels=b_labels)\n",
+    "        loss = outputs.loss\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "        lr_scheduler.step()\n",
+    "        optimizer.zero_grad()\n",
+    "        \n",
+    "        total_loss += loss.item()\n",
+    "\n",
+    "    avg_train_loss = total_loss / len(train_dataloader)\n",
+    "    print(f\"Epoch {epoch + 1}/{num_epochs} - Loss: {avg_train_loss:.4f}\")\n",
+    "\n",
+    "    # Validation\n",
+    "    model.eval()\n",
+    "    eval_loss, eval_accuracy, nb_eval_steps = 0, 0, 0\n",
+    "\n",
+    "    for batch in dev_dataloader:\n",
+    "        batch = tuple(t.to(device) for t in batch)\n",
+    "        b_input_ids, b_input_mask, b_labels = batch\n",
+    "        \n",
+    "        with torch.no_grad():\n",
+    "            outputs = model(b_input_ids, token_type_ids=None, attention_mask=b_input_mask, labels=b_labels)\n",
+    "        \n",
+    "        logits = outputs.logits.detach().cpu().numpy()\n",
+    "        label_ids = b_labels.to('cpu').numpy()\n",
+    "        \n",
+    "        tmp_eval_accuracy = flat_accuracy(logits, label_ids)\n",
+    "        eval_accuracy += tmp_eval_accuracy\n",
+    "        nb_eval_steps += 1\n",
+    "\n",
+    "    print(f\"Validation Accuracy: {eval_accuracy / nb_eval_steps:.4f}\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -131,7 +282,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
