test/training done

--- a/deliverable.ipynb
+++ b/deliverable.ipynb
@@ -162,7 +162,9 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "## 3.1. Preprocessing",
+   "source": [
+    "## 3.1. Preprocessing"
+   ],
    "id": "43ab56b3cd27f857"
   },
   {
@@ -191,7 +193,9 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "## 3.2 Compiling the model",
+   "source": [
+    "## 3.2 Compiling the model"
+   ],
    "id": "aea06ccb11c2a607"
   },
   {
@@ -339,7 +343,9 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "## 3.3 Fitting data",
+   "source": [
+    "## 3.3 Fitting data"
+   ],
    "id": "1066e352d6d27855"
   },
   {
@@ -412,7 +418,9 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "# 4. Testing",
+   "source": [
+    "# 4. Testing"
+   ],
    "id": "d04a33e45f5c868"
   },
   {
